Fix synatx and runtime errors